@@ -39,8 +39,9 @@ $table->data = array ();
 foreach ($config['extensions'] as $extension) {
 	if ($extension['godmode_function'] == '')
 		continue;
+		
 	$data = array ();
-	$data[0] = '<a href="index.php?sec=gextensions&sec2='.$menu['sec2'].'" class="mn">'.$menu['name'];
+	$data[0] = '<a href="index.php?sec=gextensions&sec2='.$extension['godmode_menu']['sec2'].'" class="mn">'.$extension['godmode_menu']['name'].'</a>';
 	array_push ($table->data, $data);
 }
 
